fix wrapping issue on slider and percent

--- a/frontend/frontend.css
+++ b/frontend/frontend.css
@@ -223,6 +223,7 @@ code {
 
 .examma-ray-section-reference-width-slider-container {
   float: right;
+  white-space: nowrap;
 }
 
 .examma-ray-section-reference-width-value {
